--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ project(ejercicios_clase)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(main main.cpp)
-add_executable(persona persona.h persona.cpp)
-add_executable(estudiante estudiante.h estudiante.cpp)
+add_library(persona STATIC persona.cpp)
+add_library(estudiante STATIC estudiante.cpp)
 
+add_executable(main main.cpp)
+
+target_link_libraries(main PRIVATE persona estudiante)
